plugins {
    id 'java'
    id "edu.sc.seis.launch4j" version "2.5.4"
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

group 'com.mohistmc.luyten'
version '1.1'

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

repositories {
    mavenCentral()
    maven { url = "https://jitpack.io" }
    maven { url = "https://maven.quiltmc.org/repository/release/" }
}

dependencies {
    implementation 'com.fifesoft:rsyntaxtextarea:3.4.1'
    implementation 'com.apple:AppleJavaExtensions:1.4'
    implementation 'org.bitbucket.mstrobel:procyon-core:0.6.0'
    implementation 'org.bitbucket.mstrobel:procyon-expressions:0.6.0'
    implementation 'org.bitbucket.mstrobel:procyon-reflection:0.6.0'
    implementation 'org.bitbucket.mstrobel:procyon-compilertools:0.6.0'
    implementation 'com.github.weisj:darklaf-core:3.0.2'
    implementation 'com.github.leibnitz27:cfr:0.152'
    implementation 'org.vineflower:vineflower:1.10.1'
    implementation 'com.bennyhuo.kotlin:kotlinp:1.8.10'
}

apply plugin: 'application'
mainClassName = 'com.mohistmc.luyten.Luyten'
application {
    mainClass = mainClassName
}

jar {
    manifest {
        attributes(
                'Premain-Class': 'com.mohistmc.luyten.JarLoader',
                'Launcher-Agent-Class': 'com.mohistmc.luyten.JarLoader',
                'Main-Class': mainClassName
        )
    }
}

jar.dependsOn(shadowJar)


launch4j {
    mainClassName = mainClassName
    icon = "${projectDir}/luyten.ico"
    jarTask = project.tasks.shadowJar
}